# Alereader

./: Cargo.toml  rss.settings  todo.txt
local/config/: alereader.conf
local/share/static/: channel.html  feed.html  home.html
local/share/static/static/css/: home.css
local/share/static/static/js/: home.js
src/: main.rs
src/instance/: app.rs  settings.rs
src/model/: fetch.rs  init.rs
src/view/: client.rs  compose.rs  mod.rs
templates/: feed.html  home.html
